style.css
body {
  font-family: "Inter Tight", sans-serif;
  font-weight: 600;
  display: flex;
  flex-direction: column;
}
header {
  background: url("images/bingo.png");
  margin-top: 60px;
  min-width: 350px;
  height: 200px;
  background-position: center; /* Center the image */
  background-repeat: no-repeat; /* Do not repeat the image */
}

#bingo-card,
ul {
  display: grid;
  grid-template-columns: repeat(5, minmax(100px, 1fr));
  gap: 20px;
  min-width: 400px;
  max-width: 800px;
  margin: 20px auto;
  padding: 40px;
}

ul {
  left: -36px;
  list-style: none;
  margin-bottom: 20px;
  position: relative;
}

li {
  color: #e54246;
  font-weight: 800;
  font-size: 28px;
  text-align: center;
}

span {
  padding: 5px;
  border-radius: 8px;
  margin: 12px 24px;
  background-color: pink;
  color: black;
}

.tile {
  height: 150px;
  width: 125px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 20px;
  padding: 10px;
  text-align: center;
  border-radius: 12px;
  border: 2px solid #000;
  background: #fff;
  font-weight: 600;
  box-shadow: 4px 4px 0px 0px #000;
}

button {
  padding: 10px;
  border-radius: 12px;
  color: black;
  font-weight: 600;
  margin: 20px auto;
  display: flex;
  border: 2px solid #000;
  background: #fff;
  box-shadow: 4px 4px 0px 0px #000;
  cursor: pointer;
}

textarea {
  border: 2px solid #000;
  width: 400px;
  height: 200px;
  margin: auto;
  border-radius: 2px;
}

#tile-12 {
  color: white;
  font-size: 28px;
  font-weight: 800;
  background: #e54246;
}

.marked {
  color: white;
  background: #e54246;
}

#bingo {
  background: white;
  min-width: 400px;
  max-width: 600px;
  margin: 20px auto;
  position: absolute;
  margin: auto;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  display: none;
}

#close-bingo {
  position: absolute;
  color: white;
  right: 0px;
  top: 0px;
  padding: 5px;
  margin: 5px;
  border: 1px solid white;
  cursor: pointer;
}

#preview {
  width: 400px;
  margin: auto;
}

@media (min-width: 900px) {
  .tile {
    height: 75px;
  }
}

@media (max-width: 450px) {
  .bingo-card {
    max-width: 400px;
    margin: auto;
  }

  .tile {
    font-size: 16px;
  }
}

